[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[replace]
"xml5ever:0.5.0" = {git = "https://github.com/servo/html5ever", rev = "m5e-lolreplace"}
"html5ever:0.15.0" = {git = "https://github.com/servo/html5ever", rev = "m5e-lolreplace"}
